--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body>
     <div id="app">
+        <v-app>
+            <v-content>
+              <v-container>Hello world</v-container>
+            </v-content>
+          </v-app>
     </div>
     <!-- built files will be auto injected -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
