--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <style>
-      .mySlides {
-        display: none;
-      }
-    </style>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons"
       rel="stylesheet"
@@ -17,15 +12,10 @@
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>cluno-offers</title>
+    <title>Cluno offers</title>
   </head>
   <body>
     <div id="app">
-      <v-app>
-        <v-content>
-          <v-container>Hello world</v-container>
-        </v-content>
-      </v-app>
     </div>
     <!-- built files will be auto injected -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
